fix : remove getFirst()